// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`endMeeting generates a meeting summary and sets sort order 1`] = `
Object {
  "agendaItem": Array [
    Object {
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 3,
      "id": 0,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 2,
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T06:59:59.998Z,
    },
    Object {
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 4,
      "id": 1,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 1,
      "teamId": 6,
      "teamMemberId": 8,
      "updatedAt": 2017-01-01T06:59:59.999Z,
    },
    Object {
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 5,
      "id": 2,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 0,
      "teamId": 6,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T07:00:00.000Z,
    },
  ],
  "meeting": Object {
    "agendaItemsCompleted": 3,
    "createdAt": 2017-01-01T08:00:00.000Z,
    "endedAt": 2017-01-01T08:00:00.000Z,
    "facilitator": 15,
    "id": 14,
    "invitees": Array [
      Object {
        "id": 16,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Black Widow",
        "present": false,
        "projects": Array [],
      },
      Object {
        "id": 15,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Captain America",
        "present": false,
        "projects": Array [],
      },
      Object {
        "id": 17,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Hulk",
        "present": false,
        "projects": Array [],
      },
      Object {
        "id": 18,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Iron Man",
        "present": false,
        "projects": Array [],
      },
      Object {
        "id": 19,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Nighthawk",
        "present": false,
        "projects": Array [],
      },
      Object {
        "id": 9,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Thor",
        "present": false,
        "projects": Array [
          Object {
            "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
            "id": 20,
            "status": "active",
            "tags": Array [
              "private",
            ],
            "teamMemberId": 9,
          },
        ],
      },
      Object {
        "id": 8,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Vision",
        "present": false,
        "projects": Array [
          Object {
            "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
            "id": 21,
            "status": "active",
            "teamMemberId": 8,
          },
        ],
      },
      Object {
        "id": 7,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "War Machine",
        "present": false,
        "projects": Array [
          Object {
            "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[3]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
            "id": 22,
            "status": "active",
            "teamMemberId": 7,
          },
          Object {
            "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
            "id": 23,
            "status": "active",
            "tags": Array [
              "private",
            ],
            "teamMemberId": 7,
          },
        ],
      },
    ],
    "meetingNumber": 1,
    "projects": Array [
      Object {
        "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[3]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
        "id": 22,
        "status": "active",
        "teamMemberId": 7,
      },
      Object {
        "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
        "id": 23,
        "status": "active",
        "tags": Array [
          "private",
        ],
        "teamMemberId": 7,
      },
      Object {
        "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
        "id": 21,
        "status": "active",
        "teamMemberId": 8,
      },
      Object {
        "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
        "id": 20,
        "status": "active",
        "tags": Array [
          "private",
        ],
        "teamMemberId": 9,
      },
    ],
    "successExpression": "Great job",
    "successStatement": "Iteration is key!",
    "teamId": 6,
    "teamName": "Team America",
  },
  "project": Array [
    Object {
      "agendaId": 2,
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 5,
      "id": 10,
      "sortOrder": 4,
      "status": "active",
      "tags": Array [
        "private",
      ],
      "teamId": 6,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T07:00:00.000Z,
      "userId": 5,
    },
    Object {
      "agendaId": 1,
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 4,
      "id": 11,
      "sortOrder": 3,
      "status": "active",
      "teamId": 6,
      "teamMemberId": 8,
      "updatedAt": 2017-01-01T06:59:59.999Z,
      "userId": 4,
    },
    Object {
      "agendaId": 0,
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 3,
      "id": 12,
      "sortOrder": 2,
      "status": "active",
      "tags": Array [
        "private",
      ],
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T06:59:59.998Z,
      "userId": 3,
    },
    Object {
      "agendaId": 0,
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[3]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.996Z,
      "createdBy": 3,
      "id": 13,
      "sortOrder": 1,
      "status": "active",
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T06:59:59.997Z,
      "userId": 3,
    },
  ],
  "team": Object {
    "activeFacilitator": 24,
    "checkInGreeting": Object {
      "content": "Shalom",
      "language": "Hebrew",
    },
    "checkInQuestion": "What’s something you’ve learned recently",
    "facilitatorPhase": "summary",
    "facilitatorPhaseItem": null,
    "id": 6,
    "isArchived": false,
    "isPaid": true,
    "meetingId": 14,
    "meetingPhase": "summary",
    "meetingPhaseItem": null,
    "name": "Team America",
    "orgId": 25,
    "tier": "personal",
  },
  "teamMember": Array [
    Object {
      "checkInOrder": 26,
      "email": "natasha.romanova@avengers.org",
      "id": 16,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Black Widow",
      "teamId": 6,
      "userId": 34,
    },
    Object {
      "checkInOrder": 27,
      "email": "steve.rogers@avengers.org",
      "id": 15,
      "isFacilitator": false,
      "isLead": true,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Captain America",
      "teamId": 6,
      "userId": 35,
    },
    Object {
      "checkInOrder": 28,
      "email": "bruce.banner@avengers.org",
      "id": 17,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Hulk",
      "teamId": 6,
      "userId": 36,
    },
    Object {
      "checkInOrder": 29,
      "email": "tony.stark@avengers.org",
      "id": 18,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Iron Man",
      "teamId": 6,
      "userId": 37,
    },
    Object {
      "checkInOrder": 30,
      "email": "kyle.richmond@avengers.org",
      "id": 19,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Nighthawk",
      "teamId": 6,
      "userId": 38,
    },
    Object {
      "checkInOrder": 31,
      "email": "thor@avengers.org",
      "id": 9,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Thor",
      "teamId": 6,
      "userId": 5,
    },
    Object {
      "checkInOrder": 32,
      "email": "vision@avengers.org",
      "id": 8,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Vision",
      "teamId": 6,
      "userId": 4,
    },
    Object {
      "checkInOrder": 33,
      "email": "james.rhodes@avengers.org",
      "id": 7,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "War Machine",
      "teamId": 6,
      "userId": 3,
    },
  ],
}
`;

exports[`endMeeting generates a meeting summary and sets sort order with pre-existing actions and projects 1`] = `
Object {
  "agendaItem": Array [
    Object {
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 3,
      "id": 0,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 0,
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T07:00:00.000Z,
    },
    Object {
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 4,
      "id": 1,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 1,
      "teamId": 6,
      "teamMemberId": 8,
      "updatedAt": 2017-01-01T06:59:59.999Z,
    },
    Object {
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 5,
      "id": 2,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 2,
      "teamId": 6,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T06:59:59.998Z,
    },
  ],
  "meeting": Object {
    "agendaItemsCompleted": 3,
    "createdAt": 2017-01-01T08:00:00.000Z,
    "endedAt": 2017-01-01T08:00:00.000Z,
    "facilitator": 16,
    "id": 15,
    "invitees": Array [
      Object {
        "id": 17,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Black Widow",
        "present": false,
        "projects": Array [],
      },
      Object {
        "id": 16,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Captain America",
        "present": false,
        "projects": Array [],
      },
      Object {
        "id": 18,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Hulk",
        "present": false,
        "projects": Array [],
      },
      Object {
        "id": 19,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Iron Man",
        "present": false,
        "projects": Array [],
      },
      Object {
        "id": 20,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Nighthawk",
        "present": false,
        "projects": Array [],
      },
      Object {
        "id": 7,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Thor",
        "present": false,
        "projects": Array [
          Object {
            "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
            "id": 21,
            "status": "active",
            "tags": Array [
              "private",
            ],
            "teamMemberId": 7,
          },
        ],
      },
      Object {
        "id": 8,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Vision",
        "present": false,
        "projects": Array [
          Object {
            "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
            "id": 22,
            "status": "active",
            "teamMemberId": 8,
          },
        ],
      },
      Object {
        "id": 9,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "War Machine",
        "present": false,
        "projects": Array [
          Object {
            "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[4]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
            "id": 23,
            "status": "active",
            "teamMemberId": 9,
          },
          Object {
            "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[3]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
            "id": 24,
            "status": "active",
            "tags": Array [
              "private",
            ],
            "teamMemberId": 9,
          },
        ],
      },
    ],
    "meetingNumber": 1,
    "projects": Array [
      Object {
        "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[4]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
        "id": 23,
        "status": "active",
        "teamMemberId": 9,
      },
      Object {
        "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[3]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
        "id": 24,
        "status": "active",
        "tags": Array [
          "private",
        ],
        "teamMemberId": 9,
      },
      Object {
        "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
        "id": 22,
        "status": "active",
        "teamMemberId": 8,
      },
      Object {
        "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
        "id": 21,
        "status": "active",
        "tags": Array [
          "private",
        ],
        "teamMemberId": 7,
      },
    ],
    "successExpression": "Great job",
    "successStatement": "Iteration is key!",
    "teamId": 6,
    "teamName": "Team America",
  },
  "project": Array [
    Object {
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 3,
      "id": 10,
      "sortOrder": 0,
      "status": "active",
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T07:00:00.000Z,
      "userId": 3,
    },
    Object {
      "agendaId": 0,
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 3,
      "id": 11,
      "sortOrder": 4,
      "status": "active",
      "tags": Array [
        "private",
      ],
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T06:59:59.999Z,
      "userId": 3,
    },
    Object {
      "agendaId": 1,
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 4,
      "id": 12,
      "sortOrder": 3,
      "status": "active",
      "teamId": 6,
      "teamMemberId": 8,
      "updatedAt": 2017-01-01T06:59:59.998Z,
      "userId": 4,
    },
    Object {
      "agendaId": 2,
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[3]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.996Z,
      "createdBy": 5,
      "id": 13,
      "sortOrder": 2,
      "status": "active",
      "tags": Array [
        "private",
      ],
      "teamId": 6,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T06:59:59.997Z,
      "userId": 5,
    },
    Object {
      "agendaId": 2,
      "content": "{\\"entityMap\\":{},\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Project[4]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}]}",
      "createdAt": 2017-01-01T06:59:59.995Z,
      "createdBy": 5,
      "id": 14,
      "sortOrder": 1,
      "status": "active",
      "teamId": 6,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T06:59:59.996Z,
      "userId": 5,
    },
  ],
  "team": Object {
    "activeFacilitator": 25,
    "checkInGreeting": Object {
      "content": "Shalom",
      "language": "Hebrew",
    },
    "checkInQuestion": "What’s something you’ve learned recently",
    "facilitatorPhase": "summary",
    "facilitatorPhaseItem": null,
    "id": 6,
    "isArchived": false,
    "isPaid": true,
    "meetingId": 15,
    "meetingPhase": "summary",
    "meetingPhaseItem": null,
    "name": "Team America",
    "orgId": 26,
    "tier": "personal",
  },
  "teamMember": Array [
    Object {
      "checkInOrder": 27,
      "email": "natasha.romanova@avengers.org",
      "id": 17,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Black Widow",
      "teamId": 6,
      "userId": 35,
    },
    Object {
      "checkInOrder": 28,
      "email": "steve.rogers@avengers.org",
      "id": 16,
      "isFacilitator": false,
      "isLead": true,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Captain America",
      "teamId": 6,
      "userId": 36,
    },
    Object {
      "checkInOrder": 29,
      "email": "bruce.banner@avengers.org",
      "id": 18,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Hulk",
      "teamId": 6,
      "userId": 37,
    },
    Object {
      "checkInOrder": 30,
      "email": "tony.stark@avengers.org",
      "id": 19,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Iron Man",
      "teamId": 6,
      "userId": 38,
    },
    Object {
      "checkInOrder": 31,
      "email": "kyle.richmond@avengers.org",
      "id": 20,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Nighthawk",
      "teamId": 6,
      "userId": 39,
    },
    Object {
      "checkInOrder": 32,
      "email": "thor@avengers.org",
      "id": 7,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Thor",
      "teamId": 6,
      "userId": 3,
    },
    Object {
      "checkInOrder": 33,
      "email": "vision@avengers.org",
      "id": 8,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Vision",
      "teamId": 6,
      "userId": 4,
    },
    Object {
      "checkInOrder": 34,
      "email": "james.rhodes@avengers.org",
      "id": 9,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "War Machine",
      "teamId": 6,
      "userId": 5,
    },
  ],
}
`;

exports[`endMeeting throw if called after meeting ended or no active meeting 1`] = `"{\\"_error\\":\\"Meeting already ended!\\"}"`;

exports[`endMeeting throw if no meeting has ever been created 1`] = `"{\\"_error\\":\\"Meeting already ended!\\"}"`;

exports[`endMeeting throw when the caller is not a team member 1`] = `"{\\"_error\\":\\"You do not have access to team foo\\"}"`;

exports[`endMeeting throws when no websocket is present 1`] = `"{\\"_error\\":\\"this must be called from a websocket\\"}"`;
